refactor : 중복문자 상수화 및 주석제거, 패키지명 수정, 변수명 수정